tests/snapshots/integration_test__log_data@8fac31dd894b827ac3acdd9c3442dd98.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/test2.log:9"
expression: result
info: "type=PROCTITLE msg=audit(1170021601.343:286): proctitle=\"(systemd)\""
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1170021601343,
  "id": 286,
  "fields": {
    "proctitle": "(systemd)"
  }
}
