tests/snapshots/integration_test__log_data@906821f26849a185161e82e9fd124732.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-sockaddr-unix-2.log:1"
expression: result
info: "type=SOCKADDR msg=audit(1703653288.035:118019478): saddr=01002F746D702F7B39653263623038372D393734342D343137622D383435662D3035636136636534353763317D0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000\u001dSADDR={ fam=local path=/tmp/{9e2cb087-9744-417b-845f-05ca6ce457c1} }"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Eof at:  }"
    }
  }
}
