tests/snapshots/integration_test__log_data@913e500b207995ae78f78a3451622382.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/test4.log:3"
expression: result
info: "type=CWD msg=audit(1655465398.534:25618): cwd=\"/usr/src/RPM/BUILD/zlib-1.2.11-alt1\""
---
{
  "record_type": "CWD",
  "timestamp": 1655465398534,
  "id": 25618,
  "fields": {
    "cwd": "/usr/src/RPM/BUILD/zlib-1.2.11-alt1"
  }
}
