tests/snapshots/integration_test__log_data@91606c72409b61adb62ad132916078b5.snap
---
source: tests/integration_test.rs
expression: record
info: "type=AVC msg=audit(1524662933.080:61207): apparmor=\"DENIED\" operation=\"ptrace\" profile=\"docker-default\" pid=5571 comm=\"metricbeat\" requested_mask=\"trace\" denied_mask=\"trace\" peer=\"unconfined\""
---
{
  "record_type": "AVC",
  "timestamp": 1524662933080,
  "id": 61207,
  "fields": {
    "apparmor": "DENIED",
    "comm": "metricbeat",
    "denied_mask": "trace",
    "operation": "ptrace",
    "peer": "unconfined",
    "pid": "5571",
    "profile": "docker-default",
    "requested_mask": "trace"
  }
}
