tests/snapshots/integration_test__log_data@948fc2dc9d3a45ccd96658a3b39f4bee.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-eoe.log:1"
expression: result
info: "type=EOE msg=audit(1615225617.302:25836):"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Tag at: :"
    }
  }
}
