tests/snapshots/integration_test__log_data@957fba23341b899c9d5d3df19acc854f.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/test.log:11"
expression: result
info: "type=CRED_DISP msg=audit(1170021601.364:298): user pid=13015 uid=0 auid=0 subj=system_u:system_r:crond_t:s0-s0:c0.c1023 msg='PAM: setcred acct=root : exe=\"/usr/sbin/crond\" (hostname=?, addr=?, terminal=cron res=success)'"
---
{
  "Err": {
    "Parse": "error Char at:  pid=13015 uid=0 auid=0 subj=system_u:system_r:crond_t:s0-s0:c0.c1023 msg='PAM: setcred acct=root : exe=\"/usr/sbin/crond\" (hostname=?, addr=?, terminal=cron res=success)'"
  }
}
