tests/snapshots/integration_test__log_data@96bbb3f1a34a97204ba40afa5737f347-2.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/auparse/test3.log:4"
expression: result
info: "node=auditdtest.a1959.org type=PROCTITLE msg=audit(1451781471.394:194435): proctitle=737368643A206275726E205B707269765D"
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194435,
  "node": "auditdtest.a1959.org",
  "fields": {
    "proctitle": "sshd: burn [priv]"
  }
}
