tests/snapshots/integration_test__log_data@9a3bcd13122943c22812ac93b58e80f3.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-avc-denied.log:1"
expression: result
info: "type=AVC msg=audit(1631798689.083:65686): avc:  denied  { setuid } for  pid=15381 comm=\"laurel\" capability=7  scontext=system_u:system_r:auditd_t:s0 tcontext=system_u:system_r:auditd_t:s0 tclass=capability permissive=1"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Char at:   denied  { setuid } for  pid=15381 comm=\"laurel\" capability=7  scontext=system_u:system_r:auditd_t:s0 tcontext=system_u:system_r:auditd_t:s0 tclass=capability permissive=1"
    }
  }
}
